<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Madlab2"
    android:backgroundTint="@color/blue"
    tools:context=".CalculatorFragment">

    <EditText
        android:id="@+id/textView10"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:autofillHints="electricity_usage"
        android:hint="@string/calculator_electricity_use"
        android:inputType="numberDecimal"
        android:text="@string/calculator_electricity_use"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@drawable/common_input_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/textView11"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:autofillHints="personal_mileage"
        android:textAlignment="center"
        android:gravity="center"
        android:hint="@string/calculator_personal_vehicle"
        android:inputType="numberDecimal"
        android:text="@string/calculator_personal_vehicle"
        android:background="@drawable/common_input_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/textView12"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:autofillHints="public mileage"
        android:hint="@string/calculator_public_transport"
        android:textAlignment="center"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:text="@string/calculator_public_transport"
        android:background="@drawable/common_input_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:contentDescription="@string/content_splash_logo" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="1000dp"
        android:layout_height="300dp"
        android:layout_marginBottom="650dp"
        android:contentDescription="@string/content_login_top_curve"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/curve_top" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_button"
        android:text="@string/calculator_calculate"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

</androidx.constraintlayout.widget.ConstraintLayout>